cluster/container-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry-service
  labels:
    app: container-registry
spec:
  selector:
    app: container-registry
  ports:
    - protocol: TCP
      port: 5000
