cluster/container-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: container-registry-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: registry.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: container-registry-service
            port:
              number: 30500
